Se actualiza sistema auditoria